Rename Combo Box to Combobox for consistency

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -710,7 +710,7 @@
     </section>
 
     <section class="widget" id="combobox">
-      <h3>Combo Box</h3>
+      <h3>Combobox</h3>
       <p>
         A <a href="#combobox" class="role-reference">combobox</a> is an input widget with an associated popup that enables users to select a value for the combobox from a collection of possible values.
         In some implementations, the pop-up presents allowed values, while in other implementations, the popup presents suggested values , and users may either select one of the suggestions or type a value.
@@ -723,7 +723,7 @@
       </p>
       <p>
         The combobox pattern supports several optional behaviors.
-        The one that most shapes interaction is text input.   
+        The one that most shapes interaction is text input.
         Some comboboxes allow users to type and edit text in the combobox and others do not.
         If a combobox does not support text input, it is referred to as select-only, meaning the only way users can set a value is by selecting a value in the pop-up.
         For example, in some browsers, an HTML <code>select</code> element with <code>size="1"</code> is presented to assistive technologies as a combobox.
@@ -782,7 +782,7 @@
         One feature that distinguishes combobox from both listbox and menu button is that its value can be presented in an editable field, which gives users the ability to select some or all of the value for copying to the clipboard.
         Comboboxes and menu buttons can be implemented so users can navigate and explore the set of allowed values in a combobox popup or menu and then decide to revert to the value the widget had before navigating by pressing <kbd>escape</kbd>.
         In contrast, navigating a listbox immediately changes its value, and escape does not provide an undo mechanism.
-        Comboboxes and listboxes can be marked as required with <code>aria-required="true"</code>, and they have an accessible name that is distinct from their value. 
+        Comboboxes and listboxes can be marked as required with <code>aria-required="true"</code>, and they have an accessible name that is distinct from their value.
         However, a menu button cannot be marked required, and while it has an accessible name, it does not have a separate value so both the name and value need to be conveyed via the accessible name.
       </p>
 
@@ -4684,7 +4684,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
                 <ul>
                   <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide any descendant content from assistive technologies.</li>
                   <li>Ideally named by visible, descendant content.</li>
-                  <li>See the <a href="#combobox">Combo Box Design Pattern</a>.</li>
+                  <li>See the <a href="#combobox">Combobox Design Pattern</a>.</li>
                 </ul>
               </td>
             </tr>
