--- a/examples/grid/dataGrids.html
+++ b/examples/grid/dataGrids.html
@@ -329,7 +329,7 @@
         <li>The navigation keys and functions are the same as example 1 except that the column
           headers are focusable because the date and amount columns provide sort functionality.</li>
           <li>A description may be edited by activating the cell.</li>
-        <li>A category may be changed by using the category pop-up menu.</li>
+        <li>A category may be changed by using the category popup menu.</li>
       </ol>
     </section>
     <section>
