Pattern keyboard interaction for combobox: change moves selection to moves focus

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -820,7 +820,7 @@
           <li>Printable Characters:
             <ul>
               <li>If the combobox is editable, type characters in the combobox. Note that some implementations may regard certain characters as invalid and prevent their input.</li>
-              <li>If the combobox is not editable, optionally moves selection to a value that starts with the typed characters.</li>
+              <li>If the combobox is not editable, optionally moves focus to a value that starts with the typed characters.</li>
             </ul>
           </li>
           <li>If the combobox is editable, it supports standard single line text editing keys appropriate for the device platform (see note below).</li>
