Pattern keyboard interaction section for tree: fix note about aria-orientation

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -991,7 +991,7 @@
               <li>In either case, focus is visually distinct from selection so users can readily see if a value is selected or not.</li>
             </ul>
         </li>
-          <li>If a tree has <a href="aria-orientation" class="property-reference">aria-orientation</a> and the nodes in a tree are arranged horizontally:
+          <li>If nodes in the tree are arranged horizontally (<a href="aria-orientation" class="property-reference">aria-orientation</a> is set to <code>horizontal</code>):
             <ol>
               <li><kbd>Down Arrow</kbd> performs as <kbd>Right Arrow</kbd> is described above, and vice versa.</li>
               <li><kbd>Up Arrow</kbd> performs as <kbd>Left Arrow</kbd> is described above, and vice versa.</li>
